--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -30,8 +30,7 @@
   <div class="wrap">
 
     <h1>🍴 Mes restos du coin</h1>
-    <p class="lead">Je suis du quartier (Endoume) et je vous partage mes bonnes adresses, du plus proche au plus loin.
-      Un peu d’humour, un brin de poésie, et surtout des endroits où on mange bien sans chichi.</p>
+    <p class="lead">vous l'avez compris, j'ai tendance à bien manger à la cantine :)je vous invite à vous rendre ou commander chez eux, vous ne serez pas déçus.</p>
 
     <!-- Filtres (facultatif) -->
     <div class="chips">
