--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -71,15 +71,15 @@
         On s’y sent vite comme un voisin. Si tu peux, demande le patio : la petite cour au calme, c’est la cerise sur la tapenade.
       </p>
       <div class="thumbs">
-        <img src="/static/images/baron1.jpg" alt="Baron Perché - patio">
-        <img src="/static/images/baron2.jpg" alt="Baron Perché - plat du marché">
-        <img src="/static/images/baron3.jpg" alt="Baron Perché - intérieur">
-      </div>
-      <div class="info">
-        🚶 ~5 min à pied depuis 1 rue Turcon •
-        🌐 <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Le+Baron+Perch%C3%A9+Marseille">Voir sur Google Maps</a>
-      </div>
-    </article>
+       <img src="/static/images/restos/baron-perche/1.jpg" alt="Baron Perché - 1">
+    <img src="/static/images/restos/baron-perche/2.jpg" alt="Baron Perché - 2">
+    <img src="/static/images/restos/baron-perche/3.jpg" alt="Baron Perché - 3">
+  </div>
+  <div class="info">
+    🚶 ~5 min à pied depuis 1 rue Turcon •
+    🌐 <a target="_blank" href="https://www.google.com/maps/search/?api=1&query=Le+Baron+Perch%C3%A9+Marseille">Voir sur Google Maps</a>
+  </div>
+</article>
 
     <!-- Chez Michel -->
     <article class="card" id="michel">
