--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -71,9 +71,9 @@
         On s’y sent vite comme un voisin. Si tu peux, demande le patio : la petite cour au calme, c’est la cerise sur la tapenade.
       </p>
       <div class="thumbs">
-       <img src="/static/images/restos/baron-perche/1.jpg" alt="Baron Perché - 1">
-    <img src="/static/images/restos/baron-perche/2.jpg" alt="Baron Perché - 2">
-    <img src="/static/images/restos/baron-perche/3.jpg" alt="Baron Perché - 3">
+       <img src="/static/images/restos/baron-perche/1" alt="Baron Perché - photo 1">
+    <img src="/static/images/restos/baron-perche/2" alt="Baron Perché - photo 2">
+    <img src="/static/images/restos/baron-perche/3" alt="Baron Perché - photo 3">
   </div>
   <div class="info">
     🚶 ~5 min à pied depuis 1 rue Turcon •
