--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -30,7 +30,7 @@
   <div class="wrap">
 
     <h1>🍴 Mes restos du coin</h1>
-    <p class="lead">vous l'avez compris, j'ai tendance à bien manger à la cantine :) je vous invite à vous rendre ou commander chez eux, vous ne serez pas déçus.</p>
+    <p class="lead">Bon, vous l’avez deviné : je mange pas que des salades. Voici quelques adresses où la fourchette travaille autant que moi… vos papilles vont faire la ola</p>
 
     <!-- Filtres (facultatif) -->
     <div class="chips">
